# flotilla

./: .agent-bundle  .claudeignore  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/agents/: BUNDLE.md  analytics.md  architect.md  design-system-architect.md  devops.md  documentary.md  engineer.md  mercator-keeper.md  orchestrator.md  planner.md  product-manager.md  release-engineer.md  technical-writer.md  testing-qa.md  vision-keeper.md
.hopewell/: config.toml  events.jsonl  meta.json
.hopewell/network/: routes.jsonl
.hopewell/network/executors/: archived.json  at-architect.json  at-design-system-architect.json  at-devops.json  at-planner.json  at-product-manager.json  at-technical-writer.json  at-testing-qa.json  code-review.json
.hopewell/nodes/: HW-0001.md  HW-0003.md  HW-0006.md  HW-0007.md  HW-0009.md
.pedia/: config.yaml
.pedia/decisions/: 0001-plain-text-storage.md
.pedia/north-stars/: 01-small-fast-notes.md
docs/: authoring-plugins.md  multi-tool.md
docs/tutorial/: getting-started.md
examples/notes-cli/: AGENTS.md  README.md  docs-multi-tool.md  docs-release-engineering.md  pyproject.toml
examples/notes-cli/.hopewell/: .claudeignore  attestations.jsonl
examples/notes-cli/.hopewell/network/executors/: at-analytics.json  at-codemap-keeper.json  at-documentary.json  at-orchestrator.json  at-vision-keeper.json  ci-pipeline.json  github-main.json  inbox.json  prod-deploy.json  uat-gate.json
examples/notes-cli/.hopewell/nodes/: HW-0002.md  HW-0004.md  HW-0005.md  HW-0008.md
examples/notes-cli/.mercator/: meta.json  systems.json
examples/notes-cli/.pedia/constitution/: technical.md
examples/notes-cli/.pedia/north-stars/: 01-small-fast-notes.md
examples/notes-cli/.pedia/prds/: search.md
examples/notes-cli/.pedia/specs/001-search/: spec.md
examples/notes-cli/notes/: __init__.py  cli.py  store.py
examples/notes-cli/scripts/: bootstrap.sh
examples/notes-cli/tests/: test_notes.py
examples/notes-cli/tutorial/: getting-started.md
flotilla/: __init__.py  cli.py  compose.py  config.py  installed.py  manifest.py  paths.py  registry.py  resolve.py
flotilla/commands/: __init__.py  doctor.py  info.py  init.py  install.py  list_cmd.py  remove.py  search.py  sync.py  upgrade.py  validate.py
scripts/: bootstrap.sh
tests/: conftest.py  test_cmd_init.py  test_cmd_install.py  test_cmd_search_info.py  test_cmd_upgrade_sync.py  test_e2e_hopewell.py  test_manifest.py
