[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "notes"
version = "0.1.0"
description = "A tiny plain-text notes CLI — the domain vehicle for the Flotilla notes-cli example."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "ocgully", email = "ocgully@users.noreply.github.com" }]
dependencies = []

[project.scripts]
notes = "notes.cli:main"

[tool.setuptools.packages.find]
include = ["notes*"]
exclude = ["tests*"]
